--- a/WeatherApp/src/app/weather-dashboard/city-list/city-list.component.html
+++ b/WeatherApp/src/app/weather-dashboard/city-list/city-list.component.html
@@ -1,30 +1,24 @@
 <ng-container *ngIf="cities$ | async as cities">
-   <div class="filter-container">
+  <div class="filter-container">
     <select [(ngModel)]="showFavoritesOnly" (ngModelChange)="onFilterChange()">
       <option [ngValue]="false">All</option>
       <option [ngValue]="true">Favorites</option>
     </select>
   </div>
-  <p-carousel
-    *ngIf="cities.length; else noCities"
-    [value]="cities"
-    [numVisible]="getNumVisible(cities.length)"
-    [numScroll]="1"
-    [circular]="false"
-    [showIndicators]="false"
-    [showNavigators]="cities.length > 3"
-    class="city-carousel"
-  >
-    <ng-template pTemplate="item" let-city>
-      <app-city-card
-        [city]="city"
-        (delete)="onDelete(city)"
-        (setCurrent)="onSetCurrent(city)"
-        (toggleFavorite)="onToggleFavorite(city)"
-      ></app-city-card>
-    </ng-template>
-  </p-carousel>
-
+  <div class="city-scroll-wrapper" *ngIf="cities.length; else noCities">
+    <button class="scroll-arrow left" (click)="scrollLeft()" aria-label="Scroll left">&#8249;</button>
+    <div class="city-scroll-row" #scrollRow>
+      <ng-container *ngFor="let city of cities">
+        <app-city-card
+          [city]="city"
+          (delete)="onDelete(city)"
+          (setCurrent)="onSetCurrent(city)"
+          (toggleFavorite)="onToggleFavorite(city)"
+        ></app-city-card>
+      </ng-container>
+    </div>
+    <button class="scroll-arrow right" (click)="scrollRight()" aria-label="Scroll right">&#8250;</button>
+  </div>
   <ng-template #noCities>
     <div class="empty-placeholder">
       <p>No locations added yet.</p>
