--- a/WeatherApp/src/app/weather-dashboard/weather-dashboard.component.scss
+++ b/WeatherApp/src/app/weather-dashboard/weather-dashboard.component.scss
@@ -11,7 +11,7 @@
   padding: 1.5vw 2vw 2vw 2vw;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow-x: visible;
   min-width: 0;
   position: relative;
   align-items: center;
